# vscode-lua-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: macros.cmake
patches/: client.patch  luamake.patch  server.patch
patches/server/: server.patch
patches/server/3rd/luamake/: luamake.patch
